# EPOSControl

./: .gitignore  CMakeLists.txt  README  TODO
CANOpenObjDict/: EPOSMaster.od
examples/simple/: simple.cpp
include/EPOSControl/: CANChannel.h  CANMotorController.h  CANMotorControllerAction.h  Common.h  EPOSControl.h  SDOField.h
interfaces/python/: PyEPOSControl.cpp
src/: CANChannel.cpp  CANFestivalInterface.cpp  CANFestivalInterface.h  CANMotorContollerAction.cpp  CANMotorController.cpp  CANMotorControllerAction.cpp  CANOpenInterface.cpp  CANOpenInterface.h  EPOSControl.cpp  EPOSMaster.c  EPOSMaster.h  SDOField.cpp  main.cpp
src/ObjDict/: EPOSObjectDict_1.c  EPOSObjectDict_1.h  EPOSObjectDict_2.c  EPOSObjectDict_2.h
